Fixing alignment AGAIN

--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,13 @@ body {
 Media query syntax in CSS: @media only screen and (min-width: 600px) {
 
   /* Styles for smallest screens go here */
-  ul {
-    margin: 3px auto 3px auto;
-    text-align: center;
-  }
+
 }
+
+nav ul {
+    margin: 3px auto 3px auto;
+    align: center;
+  }
 
 body {
   text-align: center;
@@ -25,19 +27,14 @@ h1 { color: gold;
       font-family: "Gill Sans Nova",
         Arial, sans-serif;}
 
-        h3 { color: white; 
+        h3 { color: white;
           font-family: "Gill Sans Nova",
             Arial, sans-serif;}
 
 img.aligned-img {
   width: 35%;
   height: 35%;
-  margin: 1px;
-}
-
-ul {
-  width: 450px;
-  padding: 50px;
+  margin: auto;
 }
 
 ul.aligned-ul {
